# tiny_ffmpeg

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_utils.cpp
android/src/main/kotlin/com/i7play/tiny_ffmpeg/: FFMpegUtils.java  TinyFfmpegPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/i7play/tiny_ffmpeg_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: tiny_ffmpeg.podspec
ios/Classes/: SwiftTinyFfmpegPlugin.swift  TinyFfmpegPlugin.h  TinyFfmpegPlugin.m  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_opt.c  ffmpeg_utils.cpp  ffmpeg_utils.h  module.modulemap
ios/Classes/include/libavcodec/: avcodec.h  mathops.h  version.h
ios/Classes/include/libavfilter/: avfilter.h
ios/Classes/include/libavresample/: avresample.h  version.h
ios/Classes/include/libavutil/: ffversion.h
lib/: tiny_ffmpeg.dart  tiny_ffmpeg_cmd.dart
test/: tiny_ffmpeg_test.dart
